tests/lit/tcheck/funcall01.isa
// RUN: not %iii --batchmode %s | filecheck %s
// Copyright (C) 2025-2026 Intel Corporation

function F(x : Integer, y : Integer := 0, z : Integer);

function main() -> Integer
begin
    F(0, y=>1);
    // CHECK: Type error: missing argument 'z'
end
